force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <label>Error Log</label>
    <pluralLabel>Error Logs</pluralLabel>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>