force-app/main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ERROR</fullName><default>true</default></value>
            <value><fullName>WARN</fullName><default>false</default></value>
            <value><fullName>INFO</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>