force-app/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>